2001-10-14 Alexander Rawass <alexannika@users.sourceforge.net>

	* added data/Makefile.am
	* modified src/Makefile.am to install binary in $(prefix)/games/@PACKAGE@/bin
	* added objconf/Makefile.am
	* changed configure.in :
	  - version set to 0.0.9cvs
	  - added data and objconv to AC_OUTPUT
	* changed toplevel Makefile.am to find subdirs data and objconv
	* added RPM spec file vegastrike.spec
	

2001-10-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* added joystick buttons
	  - wrote BindButton etc in in_joystick
	  - buttonBindings are called in ProcessJoystick
	  - buttons are bound in FlyByJoystick (FireKeyboardButtons don't work?)
	  - buttonState is set in FlyByJoystick::Execute

	
2001-10-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* made joystick work (no buttons yet, no hat, just steering)
	  - no FlyByWire::Execute(); is called in FlyByKeyboard::Execute()
	      when Joystick is enabled
	    FlyByWire::Execute(); is called instead in FlyByJoystick::Execute()
            please check if keyboard still works on systems without joystick
	  - modified FlyByJoystick::Execute()
	  - improved in_joystick
	  - ProcessJoystick is just a dummy function now

	
2001-10-10 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified doxyConfig:
	  replaced absolute path with relative
	  (documentation is generated in ./doxygen)
	  added alphabetical listing
	* added files in_joystick.{cpp,h}
	* modified Makefile.am to compile in_joystick
	* uncommented SDL_Init in main.cpp
	* calling Process/InitJoystick in in_main.cpp
	* yet only debug-output is done, joystick has no effect yet
	* had to convert modified files from dos to unix